# surface-wipe

./: CMakeLists.txt  README.md  design.md  package.xml
include/surface_wipe/: wipe_trajectory.hpp
src/: wipe_node.cpp
test/: test_wipe_trajectory.cpp
